--- a/src/components/CarouselItem/CarouserlItem.module.scss
+++ b/src/components/CarouselItem/CarouserlItem.module.scss
@@ -5,6 +5,14 @@
     border-radius: 25px;
     text-align: center;
     overflow: hidden;
+    @media only screen and (min-width:1024px) {
+      width: 30%;
+    }
+    @media only screen and (max-width:1024px) {
+      width: 50vw;
+      scroll-snap-align: center;
+      
+    }
     &_title {
       font-family: "Azonix";
       line-height: 35px;
