--- a/src/components/OurProducts/OurProducts.module.scss
+++ b/src/components/OurProducts/OurProducts.module.scss
@@ -1,7 +1,5 @@
 .container__ourProducts {
-  padding-top: 50px;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding: 50px 5% 50px 5%;
   justify-content: center;
   min-height: 100vh;
   &_title {
