--- a/src/components/CarouselItem/CarouserlItem.module.scss
+++ b/src/components/CarouselItem/CarouserlItem.module.scss
@@ -9,7 +9,7 @@
       width: 30%;
     }
     @media only screen and (max-width:1024px) {
-      width: 50vw;
+      // width: 50vw;
       scroll-snap-align: center;
       
     }
