--- a/src/components/Specifications/Specifications.module.scss
+++ b/src/components/Specifications/Specifications.module.scss
@@ -7,6 +7,9 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  @media screen and (max-width: 1024px) {
+    column-gap: 10px;
+  }
 
   &_heads {
     display: flex;
