--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -62,4 +62,11 @@
       }
     }
   }
+  .form_thanks{
+    padding: 30px;
+    margin-top: 30px;
+    span{
+        color: #f0fd71;
+    }
+  }
 }
