--- a/src/components/OurProducts/OurProducts.module.scss
+++ b/src/components/OurProducts/OurProducts.module.scss
@@ -20,17 +20,14 @@
       font-weight: 800;
     }
   }
-  &_content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 20px;
-    span,
-    ul,
-    li,
-    strong {
-      font-size: 10px !important;
+  &_content { 
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    @media only screen and (max-width: 768px) {
+      grid-template-columns: repeat(1, 1fr);
     }
+   
     .type {
       text-decoration: underline 0.5px;
     }
@@ -38,7 +35,6 @@
       padding: 10px;
       background-color: #1e1e1e;
       max-width: 100%;
-      height: 250px;
       border-radius: 15px;
       display: flex;
       column-gap: 10px;
@@ -46,7 +42,7 @@
       &-description {
         display: flex;
         flex-direction: column;
-        width: 50%;
+        width: 35%;
         .box__product_title {
           display: flex;
           justify-content: space-between;
@@ -69,7 +65,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 45%;
+        width: 65%;
         span {
           text-align: center;
         }
@@ -85,10 +81,7 @@
       flex-flow: wrap;
       justify-content: space-between;
 
-      .box__product {
-        max-width: 45%;
-        height: 220px;
-      }
+    
     }
   }
 }
