--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -60,13 +60,17 @@
           color: #f0fd71;
         }
       }
+      button .active {
+        transition: ease-in-out 0.26s;
+        box-shadow: 0px 0px 4px 1px #f0fd71;
+      }
     }
   }
-  .form_thanks{
+  .form_thanks {
     padding: 30px;
     margin-top: 30px;
-    span{
-        color: #f0fd71;
+    span {
+      color: #f0fd71;
     }
   }
 }
