--- a/src/components/Prototype/Prototype.module.scss
+++ b/src/components/Prototype/Prototype.module.scss
@@ -24,6 +24,10 @@
       height: 50px;
       padding: 20px;
       width: 80%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
       @media only screen and (min-width: 768px) {
         width: 60%;
       }
@@ -31,19 +35,16 @@
         display: block;
         object-fit: none;
         object-position: center;
-        @media only screen and (min-width: 768px) {
-          object-fit: none;
-        }
       }
     }
     &_content {
       display: grid;
       grid-template-columns: 1fr;
       grid-gap: 10px;
+      justify-items: center;
 
-      @media only screen and (min-width: 390px) {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+      @media only screen and (min-width: 768px) {
+        grid-template-columns: 1fr 1fr 1fr;
       }
       .box_img {
         position: relative;
@@ -53,53 +54,18 @@
         border-radius: 10px;
         padding: 20px;
         height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+        overflow: hidden;
+
         img {
           display: block;
           object-fit: none;
           object-position: center;
-          @media only screen and (min-width: 768px) {
-            object-fit: none;
-          }
         }
       }
     }
   }
 }
-
-// .partner {
-//     &__box {
-
-//       &_head{
-//           display: flex;
-//           justify-content: center;
-//       }
-//       &_items{
-//           display: grid;
-//           grid-template-columns: 1fr 1fr;
-//           grid-gap: 25%;
-//           @media only screen and (min-width: 768px) {
-//             display: grid;
-//             grid-template-columns: 1fr 1fr 1fr;
-//             grid-gap: 10px;
-//           }
-//       }
-
-//       .box_img {
-//         height: 70px;
-//         position: relative;
-//         background: rgba(14, 14, 14, 0.5);
-//         border: 0.5px solid #313131;
-//         backdrop-filter: blur(1px);
-//         border-radius: 10px;
-//         padding: 20px;
-//         img {
-//           display: block;
-//           object-fit: contain;
-//           object-position: center;
-//           @media only screen and (min-width: 768px) {
-//             object-fit: none;
-//           }
-//         }
-//       }
-//     }
-//   }
