--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -65,12 +65,20 @@
         box-shadow: 0px 0px 4px 1px #f0fd71;
       }
     }
-  }
-  .form_thanks {
-    padding: 30px;
-    margin-top: 30px;
-    span {
-      color: #f0fd71;
+
+    .form_thanks {
+      padding: 30px;
+      margin-top: 30px;
+      background: rgba(14, 14, 14, 0.5);
+      border: 0.5px solid #313131;
+      -webkit-backdrop-filter: blur(1px);
+      backdrop-filter: blur(1px);
+      border-radius: 10px;
+      width: fit-content;
+
+      span {
+        color: #f0fd71;
+      }
     }
   }
 }
